--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
   </head>
   <body>
     <h1>Welcome to my first webpage</h1>
+    <div>
+      <p>This is a website</p>
+    </div>
   </body>
 </html>
